# cvrbot

./: README.md  requirements.sh
bot_nav2/config/: nav.param.yaml
bot_nav2/launch/: localizatin.launch.py  nav2.launch.py  nav_map.launch.py
bumperbot_bringup/config/: rplidar_a1.yaml
bumperbot_bringup/launch/: real_hardware.launch.py  real_robot.launch.py
bumperbot_controller/bumperbot_controller/: noisy_controller.py  simple_controller.py
bumperbot_controller/config/: bumperbot_controllers.yaml  joy_teleop.yaml
bumperbot_controller/launch/: controller.launch.py
bumperbot_controller/src/: noisy_controller.cpp  simple_controller.cpp
bumperbot_firmware/: package.xml
bumperbot_firmware/launch/: hardware_interface.launch.py
bumperbot_firmware/src/: bumperbot_interface.cpp
bumperbot_utils/: CMakeLists.txt
bumperbot_utils/bumperbot_utils/: mpu6050_driver.py
cvr_bot_description/: package.xml  setup.cfg  setup.py
cvr_bot_description/config/: bumperbot_controllers.yaml  controllers.yaml  ekf.yaml  gazebo_params.yaml  joy_teleop.yaml  joystick.yaml  mapper_params_online_async.yaml  my_controllers.yaml
cvr_bot_description/launch/: display.launch.py  gazebo.launch.py  joystick.launch.py  joystick_teleop.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  (+4 more)
cvrbot_description/: CMakeLists.txt  package.xml
cvrbot_firmware/: CMakeLists.txt  package.xml
cvrbot_firmware/cvrbot_firmware/: imu_republisher.py  mpu6050_driver.py  twist_relay.py
cvrbot_nav2/: CMakeLists.txt  package.xml
serial_motor_demo/: .gitignore
(+88 files in other folders)
